Fix the linter issues 2

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ html {
   box-sizing: border-box;
 }
 
-*, 
-*::after, 
+*,
+*::after,
 *::before {
   box-sizing: inherit;
 }
@@ -14,9 +14,9 @@ nav {
   position: absolute;
   top: 0;
   left: 0; 
-  width: 100vw; 
-  font-size: 2rem;  
-  font-family: 'Poppins', sans-serif
+  width: 100vw;
+  font-size: 2rem;
+  font-family: 'Poppins', sans-serif;
 }
 
 .nav-list {
@@ -25,13 +25,13 @@ nav {
   gap: 15px
 }
 
-li{
+li {
   list-style-type: none;
 }
 
 a {
   text-decoration: none;
-  color: black
+  color: black;
 }
 
 a:focus {
@@ -43,22 +43,22 @@ nav i {
 }
 
 @media screen and (max-width: 600px) {
-    .nav-list {
-      display: none;
-    }
+  .nav-list {
+    display: none;
+  }
 
-    nav {
-      display: flex;
-      justify-content: flex-end
-    }
+  nav {
+    display: flex;
+    justify-content: flex-end;
+  }
 
-    nav > i {
-      display: block;
-      margin: 10px;
-      background-image: url(./media/icons/menu_black_24dp.svg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 24px;
-      height: 24px
-    }
+  nav > i {
+    display: block;
+    margin: 10px;
+    background-image: url(./media/icons/menu_black_24dp.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+  }
 }
