--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 nav {
   position: absolute;
   top: 0;
-  left: 0; 
+  left: 0;
   width: 100vw;
   font-size: 2rem;
   font-family: 'Poppins', sans-serif;
@@ -22,7 +22,7 @@ nav {
 .nav-list {
   display: flex;
   justify-content: center;
-  gap: 15px
+  gap: 15px;
 }
 
 li {
