--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
 
 html {
-  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 *,
@@ -14,7 +15,6 @@ html {
 
 header {
   box-shadow: #dddfe6 0 0.5px 0 0;
-  font-family: 'Poppins', sans-serif;
   font-size: 2rem;
   width: 100vw;
 }
@@ -38,7 +38,7 @@ a:focus {
   text-decoration: goldenrod underline;
 }
 
-header i {
+.menu-icon {
   display: none;
 }
 
@@ -50,23 +50,23 @@ header i {
   width: 100vw;
 }
 
-.headline-section .headline-content {
+.headline-content {
   width: 40vw;
 }
 
-.headline-section h1 {
+.headline-title {
   font-family: 'Playfair Display', sans-serif;
   font-size: 7rem;
 }
 
-.headline-section p {
+.headline-p {
   color: #1a2236;
   font-size: 1rem;
   letter-spacing: -0.01em;
   line-height: 21px;
 }
 
-.headline-section button {
+.headline-button {
   background-color: #1a2236;
   border: none;
   color: #fff;
@@ -77,7 +77,7 @@ header i {
   text-align: center;
 }
 
-.headline-section img {
+.headline-img {
   height: 100%;
   width: 45vw;
 }
@@ -87,18 +87,56 @@ header i {
     display: none;
   }
 
-  header {
+  header nav {
     display: flex;
     justify-content: flex-end;
   }
 
-  header > i {
+  .menu-icon {
     background-image: url(./media/icons/menu_black_24dp.svg);
     background-repeat: no-repeat;
     background-size: cover;
     display: block;
-    height: 24px;
-    margin: 10px;
-    width: 24px;
+    height: 35px;
+    margin: 5vw;
+    width: 35px;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .headline-section {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    height: auto;
+    padding: 5vw;
+    position: relative;
+    width: calc(100%-20px);
+  }
+
+  .headline-content {
+    width: 100%;
+  }
+
+  .headline-title {
+    font-size: 13vw;
+    margin-bottom: 7vw;
+  }
+
+  .headline-p {
+    width: 100%;
+    margin-bottom: 10vw;
+  }
+
+  .headline-button {
+    margin-left: 15%;
+    width: 70%;
+  }
+
+  .headline-img {
+    align-self: center;
+    max-height: auto;
+    max-width: 100%;
   }
 }
