--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a:focus {
   color: #fff;
   font-size: 1.3rem;
   font-weight: 500;
-  padding: 2rem;
+  padding: 5vw;
   line-height: 1.5rem;
   text-align: center;
 }
@@ -104,6 +104,16 @@ a:focus {
 
 .project-6 .project-image {
   background-image: url('./media/project-6.png');
+}
+
+.wrapper-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.projects-section {
+  display: grid;
+  grid-column: 1fr;
 }
 
 @media screen and (max-width: 600px) {
@@ -175,7 +185,7 @@ a:focus {
   .project-image {
     width: 100%;
     height: 58vw;
-    background-size: cover;
+    background-size: contain;
     position: relative;
     left: -3vw;
   }
@@ -209,7 +219,7 @@ a:focus {
   }
 
   .project-container > * {
-    margin-left: 8vw;
+    margin-left: 3vw;
   }
  
   .project-container {
@@ -314,5 +324,11 @@ a:focus {
   .about-list li {
     list-style: disc;
     font-size: 5.625vw;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 900px) {
+  .projects-section {
+    grid-template-columns: 1fr 1fr;
   }
 }
