--- a/style.css
+++ b/style.css
@@ -351,6 +351,9 @@ a:focus {
     font-weight: 800;
     line-height: 30px;
   }
+  .about-detail ul{
+    float: left;
+  }
 
   .about-list li {
     list-style: disc;
