--- a/style.css
+++ b/style.css
@@ -20,9 +20,13 @@ header {
 }
 
 .header-list {
-  display: flex;
+  display: inline-block;
   gap: 15px;
   justify-content: center;
+}
+
+.header-list li {
+  float: left;
 }
 
 li {
