--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ html {
 }
 
 header {
+  display: flex;
+  justify-content: center;
   box-shadow: #dddfe6 0 0.5px 0 0;
   font-size: 2rem;
   width: 100vw;
@@ -31,6 +33,7 @@ li {
 
 .header-list li {
   float: left;
+  margin-inline-end: 3vw;
 }
 
 a {
