--- a/style.css
+++ b/style.css
@@ -116,6 +116,24 @@ a:focus {
   left: -10vw;
 }
 
+.projects-section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-column-gap: 0;
+  grid-row-gap: 0;
+}
+
+.grid-project-div-1 { grid-area: 1 / 1 / 4 / 5; }
+.grid-project-div-2 { grid-area: 1 / 5 / 4 / 13; }
+.grid-project-div-3 { grid-area: 4 / 1 / 6 / 5; }
+.grid-project-div-4 { grid-area: 4 / 5 / 6 / 9; }
+.grid-project-div-5 { grid-area: 4 / 9 / 6 / 13; }
+.grid-project-div-6 { grid-area: 6 / 1 / 9 / 8; }
+.grid-project-div-7 { grid-area: 6 / 8 / 9 / 13; }
+.grid-project-div-8 { grid-area: 9 / 1 / 11 / 8; }
+.grid-project-div-9 { grid-area: 9 / 8 / 11 / 13; }
+
 .project-1 .project-image {
   background-image: url("./media/project-1.png");
 }
@@ -141,11 +159,6 @@ a:focus {
 }
 
 .wrapper-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
-.projects-section {
   display: grid;
   grid-template-columns: 1fr;
 }
