--- a/style.css
+++ b/style.css
@@ -629,6 +629,7 @@ form textarea {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
@@ -636,6 +637,7 @@ form textarea {
   background-color: #fff;
   z-index: 100;
   line-height: 20vw;
+  overflow: hidden;
 }
 
 .hamburger-menu::before {
@@ -657,8 +659,8 @@ form textarea {
   background-repeat: no-repeat;
   position: fixed;
   width: 100%;
+  height: 47vw;
   bottom: 0;
-  height: max-content;
   background-size: cover;
   z-index: 1000;
 }
@@ -667,6 +669,7 @@ form textarea {
   position: fixed;
   top: 2vw;
   right: 2vw;
+  z-index: 1001;
 }
 
 @media screen and (max-width: 600px) {
